# VulkanAbstraction

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  VulkanApp.cpp  VulkanApp.h  compile_shader.bat  main.cpp  update_notes.txt  update_notes_old.txt  vka_example.cpp  vka_example.h
assets/models/: empty.mtl  test.mtl
assets/shaders/: main.frag  main.vert
include/: vulkan_absraction.h
lib/: stb_image.h
lib/stb/: implementation.cpp  stb.h
src/: vka_attachment.cpp  vka_buffer.cpp  vka_device.cpp  vka_instance.cpp  vka_queue.cpp  vka_shader.cpp  vka_swapchain.cpp  vka_texture.cpp  vka_utility.cpp
test/: format_sizeof_asm.cpp  unique_handle_asm_test.cpp  vka_test.cpp  vka_test.h
vka/: constants.h  defs.h  types.h  vka.h  vka_global.h  vka_types.h
vka/attachment/: vka_attachment.h  vka_attachment_impl.h
vka/buffer/: vka_buffer.h  vka_buffer_impl.h
vka/core/: core.h  vka_global.h  vka_types.h
vka/core/attachment/: attachment.cpp  attachment.h  attachment.inl  attachment_inline.inl  vka_attachment.h  vka_attachment_impl.inl  vka_attachment_inline_impl.inl
vka/core/buffer/: buffer.cpp  buffer.h  buffer.inl  buffer_inline.inl  vka_buffer.h  vka_buffer_impl.inl  vka_buffer_inline_impl.inl
vka/core/common/: common.cpp  common.h  common.inl  common_inline.inl  vka_common.h  vka_common_impl.inl  vka_common_inline_impl.inl
vka/core/descriptor/: binding_list.cpp  binding_list.inl  descriptor.h  descriptor_class.h  descriptor_inline.inl  descriptor_layout_array.inl  descriptor_set_array.inl  descriptor_set_binding_list.inl  layout.cpp  layout.inl  set.cpp  set.inl  top.h  update.cpp  update.inl  vka_descriptor.h  vka_descriptor_inline_impl.inl  vka_descriptor_manager_impl.inl
vka/core/device/: device.cpp  device.h  device.inl  vka_device.h  vka_device_impl.inl
vka/core/error/: error.h  error.inl
vka/core/format/: format.cpp  format.h  format.inl  format_inline.inl  vka_format.h  vka_format_impl.inl  vka_format_inline_impl.inl
vka/core/handle/: dynamic_array.inl  handle.h  handle_guard.h  handle_guard.inl  no_parent.inl  parent.inl  unique_handle.h  unique_handle_dynamic_array.inl  unique_handle_no_parent.inl  unique_handle_parent.inl  unique_handle_static_array.inl
vka/core/instance/: instance.cpp  instance.h  instance.inl  vka_instance.h  vka_instance_impl.inl
vka/core/memory/: memory.cpp  memory.h  memory.inl  vka_memory.h  vka_memory_impl.inl
vka/core/model/: vka_mesh_impl.inl  vka_model.h  vka_model_impl.inl
vka/core/push_constant/: layout.inl  push_constant.h  push_constant.inl  push_constant_class.h  push_constant_layout.inl  push_constant_top.h  push_constant_view.inl  top.h  view.inl  vka_push_constant.h  vka_push_constant_inline_impl.inl
vka/core/queue/: queue.cpp  queue.h  queue.inl  queue_inline.inl  vka_queue.h  vka_queue_impl.inl  vka_queue_inline_impl.inl
vka/core/renderer/: renderer.cpp  renderer.h  renderer.inl
vka/core/shader/: shader.cpp  shader.h  shader.inl  shader_inline.inl  vka_shader.h  vka_shader_impl.inl  vka_shader_inline_impl.inl  vka_shader_program_impl.inl
vka/core/surface/: surface.cpp  surface.h  surface.inl  vka_surface.h  vka_surface_impl.inl
vka/core/swapchain/: swapchain.cpp  swapchain.h  swapchain.inl  vka_swapchain.h  vka_swapchain_impl.inl
vka/core/texture/: 3d_merger.inl  component_merger.inl  loader.inl  merger.inl  texture.cpp  texture.h  texture.inl  texture_inline.inl  texture_top.h  top.h  vka_texture.h  vka_texture_impl.inl  vka_texture_inline_impl.inl
vka/core/utility/: vka_utility.h  vka_utility_impl.inl  vka_utility_inline_impl.inl
vka/core/window/: window.cpp  window.h  window.inl
vka/descriptor/: vka_descriptor.h  vka_descriptor_manager_impl.h
vka/detail/: detail.h
vka/detail/attachment/: attachment.h  attachment.inl
vka/detail/buffer/: buffer.h  buffer.inl
vka/detail/common/: common.h  common.inl  vka_common.h  vka_common_impl.inl  vka_common_inline_impl.inl
vka/detail/descriptor/: descriptor.h  descriptor.inl  vka_descriptor.h  vka_descriptor_inline_impl.inl
vka/detail/device/: device.cpp  device.h  device.inl  vka_device.h  vka_device_impl.inl  vka_device_inline_impl.inl
vka/detail/error/: error.cpp  error.h  error.inl  error_inline.inl  vka_error.h  vka_error_impl.inl  vka_error_inline_impl.inl
vka/detail/format/: format.h  format.inl  vka_format.h  vka_format_inline_impl.inl
vka/detail/guard/: guard.h  image_view_guard.h  swapchain_guard.h
vka/detail/handle/: handle.h  unused_code.h
vka/detail/instance/: instance.cpp  instance.h  instance.inl  vka_instance.h  vka_instance_impl.inl  vka_instance_inline_impl.inl
vka/detail/model/: vka_array_impl.inl  vka_model.h
vka/detail/push_constant/: push_constant.h  push_constant.inl  vka_push_constant.h  vka_push_constant_impl.inl  vka_push_constant_inline_impl.inl
vka/detail/queue/: queue.h  queue.inl  vka_queue.h  vka_queue_impl.inl  vka_queue_inline_impl.inl
vka/detail/renderer/: renderer.h  renderer.inl
vka/detail/texture/: texture.h  texture.inl  vka_texture.h
vka/detail/utility/: vka_utility.h  vka_utility_impl.inl  vka_utility_inline_impl.inl
vka/detail/window/: window.h  window.inl
vka/device/: vka_device.h  vka_device_impl.h
vka/forward/: constants.h  forward.h  types.h
vka/forward/swapchain/: swapchain.h  swapchain.inl
vka/instance/: vka_instance.h  vka_instance_impl.h
vka/model/: vka_mesh_impl.h  vka_model.h  vka_model_impl.h  vka_vertex_impl.h
vka/queue/: vka_queue.h  vka_queue_impl.h
vka/shader/: vka_shader.h  vka_shader_impl.h  vka_shader_program_impl.h
vka/swapchain/: vka_swapchain.h  vka_swapchain_impl.h
vka/texture/: vka_texture.h  vka_texture_impl.h
vka/utility/: vka_utility.h  vka_utility_impl.h
